homeassistant/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant-svc
  namespace: homeassistant
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
  selector:
    app: homeassistant
