homeassistant/homeassistant-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homeassistant-route
  namespace: homeassistant
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
  hostnames:
    - home.jarvis-home.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant-svc
          port: 8123
